--- a/style.css
+++ b/style.css
@@ -534,3 +534,12 @@ color:none;
 .col-md-2{
   position:absolute;
 }
+
+.content{
+  background-color:white;
+  position:relative;
+  margin-top:300px;
+  height:500px;
+  width:100%;
+
+}
