--- a/style4.css
+++ b/style4.css
@@ -8,17 +8,20 @@
  }
 
 body {
-background-color:white;
-z-index:9;
+ 
+background-color:black;
+z-index:1;
+
+
 }
+
 
 .fixed {
 z-index:1;
-position:fixed;
+position: relative;
 background-color:#09092a;
 height:120px;
 width:100%;
-margin-top:0;
 padding:0px;
 opacity:1;
 }
@@ -28,7 +31,6 @@ img.img1 {
 float:left;
 height:100px;
 width:16%;
-position:fixed;
 z-index:8;
 margin-top:10px;
 
@@ -45,7 +47,7 @@ margin-left:0px;
 
 }
 .menu {
-position:fixed;
+position:relative;
 z-index:8;
 width:100%;
 height:70px;
@@ -141,111 +143,12 @@ ul li.act {
    color:black;
 }
 
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0;}
-.mySlides {display: none}
-img {vertical-align: middle;}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1500px;
-  position: relative;
-  margin: auto;
-  margin-top:150px;
-  
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-.prev {
-  left: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
 
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
 
   
   
   
-  
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
@@ -256,32 +159,21 @@ background-color: black;
 margin-left:0px;
 
 }
-.choose {
+/*.choose {
   background-color:#09092a;
   height:300px;
   width:100%;
 }
+*/
 
 
-$primary-light-blue: #8DB9ED;
-$primary-line-color: #ccc;
 * {
   box-sizing: border-box
 }
 html, body {
   height: 100%
 }
-body {
-  font-family: MV Boli;
-  font-size:10px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: auto;
-  display: flex;
-  flex-flow: column nowrap;
-  //This justify-content is essentially unnecessary in Firefox and Chrome due to the flex: 1 1 auto on the main.  However, it's needed to push the footer down on IE11
-  justify-content: space-between
-}
+
 ul {
   list-style: none
 }
@@ -301,17 +193,7 @@ a {
   display: flex;
   flex-flow: row wrap;
 }
-//This main is mostly to push the footer to the bottom and for demo purposes.
-main {
-  flex: 1 1 auto; //For IE11
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family:MV Boli;
-  font-size:10px;
-  color:white;/*rgb(155,155,155);*/
-  line-height: 1
-}
+
 footer {
   background: black;
   margin-top: auto;
@@ -481,47 +363,7 @@ footer {
   }
 }
 
-.overlay {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9);
-  overflow-x: hidden;
-  transition: 0;
-}
 
-.overlay-content {
-  position: relative;
-  top:10%;
-  width: 100%;
-  height:100%;
-  text-align: center;
-  
-}
-
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-color:none;
-}
-
-.overlay .closebtn {
-  position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
-}
 
 @media screen and (max-height: 450px) {
   .overlay a {font-size: 20px}
@@ -534,3 +376,4 @@ color:none;
 .col-md-2{
   position:absolute;
 }
+
